# =========================
# Project Metadata
# =========================
[project]
name = "muzero"
version = "0.1.1"
description = "CUAIS MuZero implementation in PyTorch"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.0",
    "gymnasium>=1.1.1",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]

# =========================
# Build System
# =========================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# =========================
# Dependency Groups
# =========================
[dependency-groups]
dev = ["ruff>=0.11.13", "pytest>=8.4.0", "mypy>=1.16.0"]

# =========================
# Tooling Configuration
# =========================

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"] # Errors, pyFlakes, Import, Naming, Warnings
ignore = ["E203", "E501"]

# Mypy configuration
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

# =========================
# UV Configuration
# =========================

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform != 'win32'" },
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },

]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform !=   'win32'" },
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },

]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
